<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="dice_sum_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="dice_prompt">Choose dice sum</string>
    <string name="welcom_user">Hi, User</string>
    <string name="app_name">CasinoGame</string>
    <string name="action_settings">Settings</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="existing_user">EXISTING USER:</string>
    <string name="user_name">User name:</string>
    <string name="password">Password:</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="re_password">Confirm Password:</string>
    <string name="first_time">FIRST TIME HERE?</string>
    <string name="email">Email:</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="wrongInput">Wrong Username Or Password,\n Please try again!</string>
    <string name="wrong_reg">Wrong input</string>
    <string name="title_activity_casino_lobby">CasinoLobbyActivity</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="high_score">High score</string>
    <string name="splash_title">Omri Glam &amp; Dvir Sofer inc.</string>
    <string name="user_name_is_taken">User name or email is already in use</string>
    <string name="sign_successful">\"SignUp successful\"</string>
    <string name="top_10">Top 10 players</string>
    <string name="dice_result_txt">Dice Result</string>
    <string name="bet_on_txt">Bet:</string>
    <string name="bet_money">0$</string>
    <string name="title_activity_dice_game">DiceGameActivity</string>
    <string name="bet_error"><![CDATA[Bet must be higer then -> 0]]></string>
    <string name="title_activity_pofer">PoferActivity</string>
    <string name="title_activity_poker">PokerActivity</string>
    <string name="total_bet_title">Total bet:</string>
    <string name="demo_money">0$</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="setting_music">Enable Music</string>

</resources>