<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background = "@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login"
        android:id="@+id/login_txt"
        android:textSize="30dp"
        android:textIsSelectable="false"
        android:textColor="#ffffffec"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/singIn_btn"
        android:layout_alignEnd="@+id/singIn_btn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/existing_user"
        android:id="@+id/existUser_txt"
        android:textSize="20dp"
        android:textColor="#ffffffec"
        android:layout_below="@+id/login_txt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user_name"
        android:id="@+id/userName"
        android:textSize="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/existUser_txt"
        android:textColorHint="#ffffffff"
        android:textColor="#ffffffff"
        android:textAlignment="textStart" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:hint="@string/hint_password"
        android:textSize="10dp"
        android:layout_below="@+id/userName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/userName"
        android:layout_alignEnd="@+id/userName"
        android:textColorHint="#ffffffff"
        android:textColor="#ffffffff"
        android:textAlignment="textStart" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/singIn_btn"
        android:textSize="20dp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ff0c0c0c"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/first_time"
        android:id="@+id/firstTime"
        android:textSize="20dp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/singIn_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/singUp_btn"
        android:textSize="20dp"
        android:textColor="#ffffffff"
        android:background="#ff0c0c0c"

        android:layout_alignTop="@+id/firstTime"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_alignBottom="@+id/firstTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/wrong"
        android:textColor="#ffff0c00"
        android:textSize="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ff000000" />

</RelativeLayout>
