<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background = "@drawable/background"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register"
        android:id="@+id/register_txt"
        android:textSize="30dp"
        android:textIsSelectable="false"
        android:textColor="#ffffffec"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_name"
        android:id="@+id/userName_txt_reg"
        android:textSize="20dp"
        android:textColor="#ffffffec"
        android:layout_below="@+id/email_reg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/password_reg"
        android:textSize="20dp"
        android:textColor="#ffffffec"
        android:layout_below="@+id/userName_txt_reg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_et_reg"
        android:textSize="10dp"
        android:inputType="textPassword"
        android:textColor="#ffffffff"
        android:layout_alignRight="@+id/rePassword_et_reg"
        android:layout_alignEnd="@+id/rePassword_et_reg"
        android:layout_toEndOf="@+id/userName_txt_reg"
        android:layout_below="@+id/userName_reg"
        android:layout_toRightOf="@+id/userName_txt_reg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/re_password"
        android:id="@+id/rePassword_reg"
        android:textSize="20dp"
        android:textColor="#ffffffec"
        android:layout_below="@+id/password_et_reg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rePassword_et_reg"
        android:textSize="10dp"
        android:inputType="textPassword"
        android:textColor="#ffffffff"
        android:layout_alignTop="@+id/rePassword_reg"
        android:layout_toRightOf="@+id/rePassword_reg"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/sginUp_btn_reg"
        android:textSize="20sp"
        android:textColor="#ffffffff"
        android:background="#ff0c0c0c"
        android:alpha="0.7"

        android:layout_alignTop="@+id/profile_pic"
        android:layout_alignRight="@+id/rePassword_et_reg"
        android:layout_alignEnd="@+id/rePassword_et_reg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email"
        android:id="@+id/email_reg"
        android:textSize="20dp"
        android:textColor="#ffffffec"
        android:layout_below="@+id/register_txt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_et"
        android:textSize="10dp"
        android:textColor="#ffffffff"
        android:layout_alignTop="@+id/email_reg"
        android:layout_alignRight="@+id/rePassword_et_reg"
        android:layout_alignEnd="@+id/rePassword_et_reg"
        android:layout_toRightOf="@+id/password_reg"
        android:layout_toEndOf="@+id/password_reg"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName_reg"
        android:textSize="10dp"
        android:textColor="#ffffffff"
        android:layout_alignRight="@+id/rePassword_et_reg"
        android:layout_alignEnd="@+id/rePassword_et_reg"
        android:layout_toEndOf="@+id/userName_txt_reg"
        android:layout_below="@+id/email_et"
        android:layout_toRightOf="@+id/userName_txt_reg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/wrong_reg"
        android:textColor="#ffff0c00"
        android:textSize="20dp"
        android:background="#ff000000"
        android:layout_below="@+id/rePassword_reg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Make Photo"
        android:id="@+id/photo_btn"
        android:layout_below="@+id/rePassword_reg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/profile_pic"
        android:layout_alignBottom="@+id/photo_btn"
        android:layout_toRightOf="@+id/photo_btn"
        android:layout_toEndOf="@+id/photo_btn" />

</RelativeLayout>
