<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background = "@drawable/casino_lobby"
    tools:context="com.example.admin.casinogames.CasinoLobbyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/hi_txt"
        android:text=" "
        android:layout_weight="0.16"
        android:textColor="#fe010000"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/high_score_btn"
        android:layout_toStartOf="@+id/high_score_btn" />

    <ImageButton
        android:layout_width="118dp"
        android:layout_height="71dp"
        android:id="@+id/cubes_btn"
        android:background="@drawable/cubes"
        android:layout_gravity="bottom"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="118dp"
        android:layout_height="71dp"
        android:id="@+id/poker_btn"
        android:background="@drawable/poker"
        android:layout_gravity="bottom"
        android:layout_alignTop="@+id/cubes_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/settings_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_score"
        android:id="@+id/high_score_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:id="@+id/logout_btn"
        android:layout_alignTop="@+id/high_score_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@drawable/chips"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/hi_txt"
        android:layout_toRightOf="@+id/hi_txt"
        android:layout_alignRight="@+id/high_score_btn"
        android:layout_alignEnd="@+id/high_score_btn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_money_txt"
        android:layout_alignTop="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_alignBottom="@+id/imageView"
        android:layout_toStartOf="@+id/logout_btn"
        android:textSize="30dp"
        android:textColor="#ff020000"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
