<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Dice Game"
        android:id="@+id/dice_title_txt"
        android:textColor="#ffffffff"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:textIsSelectable="false" />

    <ImageView
        android:id="@+id/die1"
        android:src="@drawable/six"
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:layout_marginRight="62dp"
        android:layout_marginEnd="62dp"
        android:layout_below="@+id/dice_title_txt"
        android:layout_toLeftOf="@+id/die2"
        android:layout_toStartOf="@+id/die2"
        android:layout_marginTop="26dp" />

    <ImageView
        android:id="@+id/die2"
        android:src="@drawable/six"
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:layout_marginRight="100dp"
        android:layout_marginEnd="100dp"
        android:layout_alignTop="@+id/die1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_below="@+id/die2"
        android:layout_alignLeft="@+id/die2"
        android:layout_alignStart="@+id/die2"
        android:layout_marginTop="39dp"
        android:layout_alignRight="@+id/die2"
        android:layout_alignEnd="@+id/die2"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bet_on_txt"
        android:id="@+id/bet_txt"
        android:layout_alignBottom="@+id/seekBar"
        android:layout_alignLeft="@+id/die1"
        android:layout_alignStart="@+id/die1"
        android:layout_alignRight="@+id/die1"
        android:layout_alignEnd="@+id/die1"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dice_result_txt"
        android:id="@+id/dice_result_txt"
        android:textColor="#ffffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/bet_txt"
        android:layout_alignStart="@+id/bet_txt" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignTop="@+id/dice_result_txt"
        android:layout_alignLeft="@+id/seekBar"
        android:layout_alignStart="@+id/seekBar"
        android:spinnerMode="dropdown"
        android:entries="@array/dice_sum_array"
        android:prompt="@string/dice_prompt"
        android:layout_alignRight="@+id/seekBar"
        android:layout_alignEnd="@+id/seekBar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Place Bet"
        android:id="@+id/betBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/bet_txt" />

</RelativeLayout>